added contact page

--- a/houseOfSteels/views/about.ejs
+++ b/houseOfSteels/views/about.ejs
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>About House Of Steels!</h1>
-    <p>About Us</p>
+    <p>The Company imports different types of steel that are beneficial for the construction sector as inputs and distributes it to end users. As it is well known, due to shortage of infrastructure, the demand for construction inputs is increasing from time to time and the public sector is unable to fill the demand supply gap. So, relying on the situation, it consolidated its resources and took part in supplying construction materials and thereby fill the gap of demand and supply. </p>
   </body>
 </html>
