--- a/houseOfSteels/views/index.ejs
+++ b/houseOfSteels/views/index.ejs
@@ -5,7 +5,10 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1>Welcome to House Of Steels!</h1>
-    <p>This website makes it accessable for custormers to buy any type of steel while sitting at home</p>
+      <img src = "images/logo.jpg" width = '300' height = '200'>
+    
+      <h1>Welcome to House Of Steels!</h1>
+      
+      <p>Why waste your time going from store to store when you can do it all right here</p>
   </body>
 </html>
