--- a/houseOfSteels/views/contact.ejs
+++ b/houseOfSteels/views/contact.ejs
@@ -10,22 +10,24 @@
     <body>
          
     <div id = "contact">
-        <h2> Where to find us </h2>
+        <h1> Where To Find Us </h1>
+        <br><br>
+        
+           <img src = "images/gollagul.jpg" alt = "location">
+        
+        <br><br>
         
         <p> We are located in the beautiful Gollagul Tower, 12th floor.
             <br><br>
             Address:<br> 
             Haile Gebreselassie Street,<br> 
-            Hayahulte Mazoria, Infront of Traffic Police Headquarters
+            Hayahulte Mazoria, Infront of Traffic Police Headquarters<br>
+            Addis Ababa, Ethiopia
         </p>
         
-        <br><br>
-        
-        <img src = "gollagul.jpg" alt = "location">
-        
-        <br><br>
-        
-     <h2> Feedback </h2>
+        <br><br><br>
+         
+     <h2> Feedback </h2> 
         
         <p>
             Name:
