--- a/houseOfSteels/public/stylesheets/style.css
+++ b/houseOfSteels/public/stylesheets/style.css
@@ -1,7 +1,31 @@
 body {
+    background-color: lightblue;
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
+
+
+h1 {font-family: Times New Roman;
+    font-size: 60px;
+    text-align: center;
+    color: black;
+    margin-top: 0px;
+    margin-bottom:0px;
+    line-height: 80px;}
+            
+h2 {font-family: Times New Roman;
+    font-size: 44px;
+    color: black;
+    margin-top: 0px;
+    margin-bottom: -15px;
+    #text-align: center;
+    letter-spacing: 2px;
+    line-height: 60px;}
+            
+p {font-family: Times New Roman;
+    font-size: 20px;
+    #line-height: 24px;
+    color: black;}
 
 a {
   color: #00B7FF;
