--- a/houseOfSteels/views/about.ejs
+++ b/houseOfSteels/views/about.ejs
@@ -5,7 +5,13 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1>About House Of Steels!</h1>
-    <p>The Company imports different types of steel that are beneficial for the construction sector as inputs and distributes it to end users. As it is well known, due to shortage of infrastructure, the demand for construction inputs is increasing from time to time and the public sector is unable to fill the demand supply gap. So, relying on the situation, it consolidated its resources and took part in supplying construction materials and thereby fill the gap of demand and supply. </p>
-  </body>
+    <h2>About Us</h2>
+      <br><br>
+      
+      <img src = "images/steel.png" width = '300' height = '300' alt = "steels">
+      <p>
+          House Of Steel is one of the biggest importing companies in Ethiopia. We are dedicated to satisfy our customers by providing quality items in a short amount of time. Our mission is to fill the gap in the lack of supplies in Ethiopia and create job apportunites.
+      </p>
+    
+    </body>
 </html>
