--- a/houseOfSteels/views/index.ejs
+++ b/houseOfSteels/views/index.ejs
@@ -5,11 +5,17 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-      <h1>Welcome to House Of Steels!</h1>
-      <img src = "images/logo.jpg" width = '300' height = '200'>
-    
+      <img src = "images/building.png" width = '500' height = '500' alt = "steels">
+      
+      <p>
+         House Of Steel imports different types of steel that are beneficial for the construction sector as inputs and distributes it to end users. As it is well known, due to shortage of infrastructure, the demand for construction inputs is increasing from time to time and the public sector is unable to fill the demand supply gap. So, relying on the situation, it consolidated its resources and took part in supplying construction materials and thereby fill the gap of demand and supply.
+      
+      </p>
       
       
-      <p>Why waste your time going from store to store when you can do it all right here</p>
+
+
+
+      <h3>We are here to help you find your needs at your convenience! </h3>
   </body>
 </html>
