--- a/houseOfSteels/public/stylesheets/style.css
+++ b/houseOfSteels/public/stylesheets/style.css
@@ -47,6 +47,14 @@ a {font-family: arial;
     border: 1px solid white;
     border-radius: 0px;}
 
+div {position: static;
+    box-sizing: border-box;
+    background-color: #adc3e6;
+    width: 100%;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;}
+
 a:link {color: white;
     background-color: #1cb2ff;
     box-shadow: 4px 4px 0px white;}
