--- a/houseOfSteels/views/error.ejs
+++ b/houseOfSteels/views/error.ejs
@@ -1,3 +1,6 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
+<h4> Application Error </h4>
+<p> Oops, something went wrong!</p>
+
+<h3><%= message %></h3>
+<h3><%= error.status %></h3>
 <pre><%= error.stack %></pre>
