--- a/houseOfSteels/views/header.ejs
+++ b/houseOfSteels/views/header.ejs
@@ -8,17 +8,18 @@
    	 <td width='20%' align='center'>Login Control</td>
     </tr>
      </table> 
+
+<div>
+    <a href = "/">Home </a>
+    <a href = "/about">About Us</a>
+    <a href = "/contact"> Contact</a>
+    <a href = "/product"> Products </a>
+    <a href = "/customer"> Customers </a>
+    <a href = "/supplier"> Suppliers </a>
+    <a href = "/saleorder"> Sale Orders </a>
+    <a href = "/orderdetail"> Order Details </a>
+</div>
     
-    <table bgcolor='lightblue'>
-        
-        <tr>
-            <a href = "/">Home </a>
-            <a href = "/about">About Us</a>
-            <a href = "/contact"> Contact</a>
-            <a href = "/dyna"> Dynamic </a>
-        </tr>
-    
-    </table>
     
     
 
