--- a/houseOfSteels/public/stylesheets/style.css
+++ b/houseOfSteels/public/stylesheets/style.css
@@ -1,9 +1,7 @@
 body {
     background-color: lightblue;
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
-
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;}
 
 h1 {font-family: American Typewriter;
     font-size: 60px;
@@ -23,17 +21,27 @@ h2 {font-family: Times New Roman;
     line-height: 60px;}
 
 h3 {font-family: Times New Roman;
-    font-size: 24px;
-    
-}
+    font-size: 20px;}
+
+h4{font-family: Times New Roman;
+    font-size: 40px;
+    color: red;
+    text-align: left;}
             
 p {font-family: Times New Roman;
     font-size: 20px;
     line-height: 24px;
     color: black;}
 
+div {position: static;
+    box-sizing: border-box;
+    background-color: #adc3e6;
+    width: 100%;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
 
-a {font-family: arial;
+    font-family: arial;
     font-size: 24px;
     text-decoration: none;
     font-weight: bold;
@@ -42,36 +50,19 @@ a {font-family: arial;
     padding-bottom: 5px;
     padding-left: 10px;
     padding-right: 10px;
-    /*make each link act like a mini div box*/
     display: inline-block;
     border: 1px solid white;
     border-radius: 0px;}
 
-div {position: static;
-    box-sizing: border-box;
-    background-color: #adc3e6;
-    width: 100%;
-    height: 100%;
-    margin-left: auto;
-    margin-right: auto;}
+a:link {color: blue;}
 
-a:link {color: white;
-    background-color: #1cb2ff;
-    box-shadow: 4px 4px 0px white;}
+a:visited {color: mediumpurple;}
 
-a:visited {color: white;
-    background-color: #1cb2ff;
-    box-shadow: 4px 4px 0px white;}
-
-a:hover {color: yellow;
-    background-color: #55c5ff;
-    box-shadow: 6px 6px 0px white;
+a:hover {color: lightgreen;
     transform: translate(-2px, -2px);
     font-size: normal;}
 
 a:active {color: limegreen;
-    background-color: #2929ea;
-    box-shadow: 0px 0px 0px white;
     transform: translate(2px, 2px);}
 .button1 {
     background-color: #008CBA;
