--- a/houseOfSteels/views/footer.ejs
+++ b/houseOfSteels/views/footer.ejs
@@ -1,3 +1,7 @@
 <div>
-    Date: <%= Date(Date.now()).toString() %> 
-</div>
+
+
+<a href = "/privacy"> Privacy Policy </a>
+<a href = "/help"> Help </a>
+    </div>
+Date: <%= Date(Date.now()).toString() %> 
