--- a/houseOfSteels/views/index.ejs
+++ b/houseOfSteels/views/index.ejs
@@ -5,40 +5,46 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-      <img src = "images/building.png" width = '500' height = '500' alt = "steels">
       
-      
-      <h3>We are here to help you find your needs at your convenience! </h3>
+      <br><br><br>
+      <h2>Our Products </h2>
+      <br><br><br>
+     
       
 <% if (products.length > 0) {%>
-      	<% products.forEach((product, index) => { %>
-<product>
-	<table>
-                        <tr>
-<td><%= product.prodname %></td>
-<td><%= product.product_id %></td>
-</tr>
-                        <tr>
-<td><%= product.productimage %></td>
-<td><%= product.status %></td>
-</tr>
-<tr>
-<td><%= product.prodprice %></td>
-<td><b>Add To Cart</b></td>
-                     </tr>
-		</table>
+      <% products.forEach((product, index) => { %>
+            <product>
+                <table>
+                    <tr>
+                        <td><h3><%= product.prodname %></h3></td>
+                    </tr>
+                    
+                    <tr>
+                        <td><%= "ID: " + product.product_id %></td>
+                    </tr>
+                    
+                    <tr>
+                        <td><%= product.productimage %></td>
+                    </tr>
+                    
+                    <tr>
+                        <td><%= product.status %></td>
+                    </tr>
+                    
+                    <tr>
+                        <td><%= "$" + product.prodprice %></td>
+                    </tr>
+                    
+                    <tr>
+                        <td><b>Add To Cart</b></td>
+                    </tr>
+                </table>
             </product>
-                    <% }); %>
+        <% }); %>
+        
         <% } else { %>
             <p>No Products</p>
         <% } %>
 
-      
-      
-      
-      <p>
-          Date: <%= Date(Date.now()).toString() %> 
-      </p>
-      
   </body>
 </html>
