--- a/houseOfSteels/views/customer/allcustomers.ejs
+++ b/houseOfSteels/views/customer/allcustomers.ejs
@@ -23,7 +23,7 @@
         <% }); %>
         </table>
         <% } else { %>
-            <p> No More Customer </p>
+            <p> No Customers </p>
         <% } %>
 
 <br><br>
