--- a/houseOfSteels/views/header.ejs
+++ b/houseOfSteels/views/header.ejs
@@ -1,20 +1,31 @@
 <table bgcolor='#adc3e6'> <tr>
 	<td width='10%' align='left'>
 		
- <img src = "images/logo.jpg" width = '300' height = '150'>
+ <img src = "/images/logo.jpg" width = '300' height = '150'>
 	</td> 
-    	<td width='60%' align='center'><h1> House Of Steel </h1></td>
+    	<td width='40%' align='center'><h1> House Of Steel </h1></td>
    	 <td width='20%' align='center'>Search Control</td>
-   	 <td width='20%' align='center'>Login Control</td>
+   	 
+   
+    
+    <td width = '13%' align='center'><a href='/customer/login'>Sign In </a>
+    or <a href='/customer/register'>Sign Up </a></td>
+    
+   
+    <td><div><a href = "/catalog/cart">My Cart </a>
+       </div></td>
+    
     </tr>
      </table> 
 
 <div>
+    
     <a href = "/">Home </a>
+    <a href = "/catalog">Catalog </a>
     <a href = "/about">About Us</a>
     <a href = "/contact"> Contact</a>
-    <a href = "/product"> Products </a>
     <a href = "/customer"> Customers </a>
+    <a href = "/product"> Products </a>
     <a href = "/supplier"> Suppliers </a>
     <a href = "/saleorder"> Sale Orders </a>
     <a href = "/orderdetail"> Order Details </a>
