--- a/houseOfSteels/views/catalog/catalog.ejs
+++ b/houseOfSteels/views/catalog/catalog.ejs
@@ -1,34 +1,23 @@
+<p> Here are some products available for you to see: </p>
+
 <% if (products.length > 0) {%>
-      <% products.forEach((product, index) => { %>
-            <product>
-                <table>
-                    <tr>
-                        <td><h3><%= product.prodname %></h3></td>
-                    </tr>
-                    
-                    <tr>
-                        <td><%= "ID: " + product.product_id %></td>
-                    </tr>
-                    
-                    <tr>
-                        <td><%= product.productimage %></td>
-                    </tr>
-                    
-                    <tr>
-                        <td><%= product.status %></td>
-                    </tr>
-                    
-                    <tr>
-                        <td><%= "$" + product.prodprice %></td>
-                    </tr>
-                    
-                    <tr>
-                        <td><a href='/catalog/<%= product.product_id %>/add'> Add To Cart</a></td>
-                    </tr>
-                </table>
-            </product>
-        <% }); %>
+      	<% products.forEach((product, index) => { %>
+	<product><form action="/catalog/add" method="post" >
+	<input type="hidden" name="product_id" value=<%= product.product_id %> > 
+	<table>
+        <tr><td><h3><%= product.prodname %></h3></td></tr>
         
-        <% } else { %>
-            <p>No Products</p>
-        <% } %>
+        <tr><td><%= product.productimage %></td></tr>
+ 		
+        <tr><td><%= "$" + product.prodprice %></td></tr>
+        
+        <tr><td><%= product.status %></td></tr>
+		
+        <tr><td>Quantity: <input type="number" name="qty" required></td></tr>
+        
+        <tr><td><button type="submit">Add to Cart</button></td></tr>
+	</table></form></product>
+        <% }); %>
+<% } else { %>
+        <p>No Products</p>
+<% } %>
