--- a/houseOfSteels/views/catalog/cart.ejs
+++ b/houseOfSteels/views/catalog/cart.ejs
@@ -23,7 +23,8 @@
 				<% totprice = totprice + lineitemcost  %>
 				<td>
 				<form action="/catalog/remove" method="post" >
-					<input type="hidden" name="itemid" value=<%= index %> >
+					<input type="hidden" name="product_id" value=<%= item.product_id %> >
+                    
 					<button type="submit">Remove</button>
 				</form>
 				</td>
@@ -33,7 +34,8 @@
 			<td colspan="2"><b>Totals</b></td>
 			<td><%= totqty %></td>
 			<td><%= totprice %></td>
-			<td>Checkout</td>
+			<td><button class='button1' onclick="window.location.href='/catalog/checkout'">Checkout</button></td>
+
 		</tr>
 	</table>
 <% } else { %>
